--- a/usersGraphQL/package.json
+++ b/usersGraphQL/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
+    "json-server": "^0.16.2",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
