--- a/Lyrical-GraphQL/package.json
+++ b/Lyrical-GraphQL/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.15.0",
     "graphql": "^0.8.2",
     "graphql-tag": "^2.11.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
     "mongoose": "^5.10.11",
