--- a/AuthGraphQL/package.json
+++ b/AuthGraphQL/package.json
@@ -39,5 +39,8 @@
     "react-router": "^3.0.2",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
